--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = ["domain"]
+members = [ "application","domain"]
 
 [workspace.dependencies]
 serde = { version = "1", features = [ "derive" ] }
