--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ members = [ "application","domain"]
 [workspace.dependencies]
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
