--- a/application/Cargo.toml
+++ b/application/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+serde_json.workspace = true
+sqlx.workspace = true
+taskios-domain = { version = "0.1.0", path = "../domain" }
