--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ futures = "0.3.31"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 tokio = { version = "1.46.1", features = ["full"] }
-authios-sdk = { git = "https://github.com/Baguuc/authios-sdk", version = "0.1.0" }
+authios-sdk = { git = "https://github.com/Baguuc/authios-rust-sdk", version = "0.1.0" }
 serde_with = "3.15.1"
